Fix z-index issue

--- a/packages/@sanity/desk-tool/src/panes/documentPane/ConnectorsOverlay.css
+++ b/packages/@sanity/desk-tool/src/panes/documentPane/ConnectorsOverlay.css
@@ -1,4 +1,5 @@
 .svg {
+  z-index: 2000;
 }
 
 .connector {
